     same Meter while being rate-limited independently.
   - New configuration option for northd 'options:use_logical_dp_groups=true'
     to enable combining of logical flows by logical datapath.  This should
     significantly decrease size of a Southbound DB.  However, in some cases,
     it could have performance penalty for ovn-controller.  Disabled by
     default.
   - BFD protocol support according to RFC880 [0]
     [0] https://tools.ietf.org/html/rfc5880)

OVN v20.09.0 - 28 Sep 2020
--------------------------
   - Added packet marking support for traffic routed with
     a routing policy.
   - Added DHCPINFORM and DHCPRELEASE support in native
     OVN DHCPv4 responder.
   - Added support for DHCP domain search option (119) in native
     OVN DHCPv4 responder.
   - The nb_cfg column from the Chassis table in the OVN Southbound
     database has been deprecated and is no longer updated. A new table
     called Chassis_Private now contains the nb_cfg column which is updated
     by incrementing the value in the NB_Global table, CMSes relying on
     this mechanism should update their code to use this new table.
   - Added support for external ip based NAT. Now, besides the logical ip,
     external ips will also decide if a packet will be NATed or not.
   - Added support for VXLAN encapsulation (not just for ramp/VTEP switches).

OVN v20.06.0
--------------------------
   - Added support for external_port_range in NAT table.
   - ovn-controller no longer monitor the external_ids column from
     the Chassis table. This was done to avoid having to do a flow
     recalculation every time external systems wrote to this column. The
     chassis configuration has now being moved to a new column called
     "other_config". As a note, the configurations are still be written to
     the external_ids column (but no longer triggers an alert) to
     keep the backward compatibility with current systems that may be