@@ -5612,6 +5612,9 @@ AT_CHECK([ovn-nbctl list bfd | awk -F: '/status/{print substr($2,2)}'], [0], [dn
 up
 ])
 
+ovn-nbctl --bfd lr-route-add R1 100.0.0.0/8 172.16.1.50
+OVS_WAIT_UNTIL([ovn-sbctl dump-flows R1 | grep 'match=(ip4.dst == 100.0.0.0/8)' | grep -q 172.16.1.50])
+
 NS_CHECK_EXEC([server], [bfdd-control stop], [0], [dnl
 stopping
 ])
@@ -5620,6 +5623,8 @@ OVS_WAIT_UNTIL([test "$(ovn-nbctl list bfd | awk -F: '/status/{print substr($2,2
 AT_CHECK([ovn-nbctl list bfd | awk -F: '/status/{print substr($2,2)}'], [0], [dnl
 down
 ])
+
+OVS_WAIT_UNTIL([test "$(ovn-sbctl dump-flows R1 | grep 'match=(ip4.dst == 100.0.0.0/8)' | grep 172.16.1.50)" = ""])
 
 kill $(pidof ovn-controller)
 
